--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -39,7 +39,7 @@ android:layout_gravity="center"
         android:layout_width="279dp"
         android:layout_height="57dp"
         android:layout_gravity="center"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/background"
         android:hint="Entrer votre nom"
         android:inputType="textAutoComplete"
@@ -50,7 +50,7 @@ android:layout_gravity="center"
         android:layout_width="279dp"
         android:layout_height="57dp"
         android:layout_gravity="center"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/background"
         android:hint="Entrer votre e-mail"
 
@@ -62,7 +62,7 @@ android:layout_gravity="center"
         android:layout_width="279dp"
         android:layout_height="57dp"
         android:layout_gravity="center"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/background"
         android:hint="Entrer votre mot de passe"
 
@@ -74,7 +74,7 @@ android:layout_gravity="center"
         android:layout_width="279dp"
         android:layout_height="57dp"
         android:layout_gravity="center"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/background"
         android:hint="confirmer votre mot de passe"
         android:inputType="textPassword"
@@ -92,6 +92,7 @@ android:layout_gravity="center"
     android:backgroundTint="@color/teal_700"
     />
     <ProgressBar
+        android:id="@+id/enCours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -99,15 +100,15 @@ android:layout_gravity="center"
         android:visibility="invisible" />
     <TextView
         android:id="@+id/compte"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
         android:text="Avez vous déjà un compte? connectez-vous "
         android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
         android:textColor="@color/black"
-        android:textSize="18sp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:textSize="17sp"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
 
 
 
