--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,13 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="230dp"
     android:src="@drawable/logo"
+        android:layout_gravity="center"
         android:contentDescription="@string/todo" />
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/allo_mon_docteur"
+        android:gravity="center"
         android:textStyle=""
         android:layout_gravity="center"
         android:layout_marginTop="70dp"
@@ -41,6 +43,7 @@
         android:layout_marginHorizontal="20dp"
         android:textAlignment="center"
         android:maxLines="5"
+        android:gravity="center"
         style="@style/TextAppearance.Material3.TitleSmall"
         />
 
@@ -53,6 +56,7 @@
         android:padding="15dp"
         android:text="ALLO MON DOCTEUR"
         android:backgroundTint="@color/teal_700"
+
         />
 
 
