--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/logo"
         android:contentDescription="@string/todo" />
 
@@ -47,9 +47,10 @@
         android:text="mot de passe oublié ?"
         android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
         android:textColor="@color/black"
+        android:layout_gravity="center"
         android:textSize="16sp"
-        android:layout_marginLeft="63dp"
-        android:layout_marginTop="15dp"
+
+
 
 
 
@@ -65,26 +66,63 @@
         android:text="@string/se_connecter"
         android:backgroundTint="@color/teal_700"
         />
+
+
+
+
     <ProgressBar
         android:id="@+id/enCours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
+
         android:visibility="invisible" />
+
     <TextView
         android:id="@+id/compte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:fontFamily="serif"
         android:text="@string/vous_n_avez_pas_de_compte_enregistrez_vous"
         android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:layout_gravity="center"
-
-
 
         />
+
+    <TextView
+        android:id="@+id/ou"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:fontFamily="serif"
+        android:text="OU"
+        android:layout_marginTop="20dp"
+        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="10dp"
+        android:background="@color/background"/>
+<Button
+    android:id="@+id/facebook"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginTop="30dp"
+    android:padding="15dp"
+    android:text="se connecter par FACEBOOK "
+    android:backgroundTint="@color/teal_700" />
+    <Button
+        android:id="@+id/gmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="3dp"
+        android:padding="15dp"
+        android:text="   se connecter par GMAIL     "
+        android:backgroundTint="@color/teal_700" />
 
 </LinearLayout>
