--- a/app/src/main/res/layout/activity_acceuil_admin.xml
+++ b/app/src/main/res/layout/activity_acceuil_admin.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,6 +7,19 @@
     android:layout_gravity="center"
 
     >
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/déconnecter"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/background"
+        android:padding="6dp"
+        android:src="@drawable/ic_logout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:tint="@color/white" />
 
     <ImageView
         android:layout_width="match_parent"
