--- a/app/src/main/res/layout/activity_recherche.xml
+++ b/app/src/main/res/layout/activity_recherche.xml
@@ -8,17 +8,20 @@
     android:background="@drawable/background"
     tools:context="com.example.allodocc.recherche">
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imageBack"
+        android:id="@+id/buttonProfil"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="12dp"
         android:padding="6dp"
-        android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:tint="@color/white"/>
+        android:tint="@color/white"
+        android:layout_marginVertical="12dp"
+        android:background="@drawable/round_button"
+        android:contentDescription="Profil"
+        app:srcCompat="@drawable/ic_baseline_person_24" />
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/déconnecter"
         android:layout_width="30dp"
@@ -56,7 +59,8 @@
         android:background="@drawable/background_content_bottom"
         android:backgroundTint="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageBack">
+        app:layout_constraintTop_toBottomOf="@id/buttonProfil"
+        tools:ignore="NotSibling">
 
         <Spinner
             android:id="@+id/specialite"
@@ -94,6 +98,34 @@
             android:text="chercher"
             android:backgroundTint="@color/teal_700"
             />
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="serif"
+            android:text="      EMAIL NON ENCORE VERIFIÉ "
+            android:textAppearance="@style/ShapeAppearance.Material3.Tooltip"
+            android:textColor="@color/red"
+            android:textSize="16sp"
+            android:layout_marginLeft="63dp"
+            android:layout_marginTop="550dp"
+            android:layout_gravity="left"
+            android:visibility="gone"
+
+            />
+        <Button
+            android:id="@+id/verificationEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="300dp"
+            android:padding="15dp"
+            android:text="Verifier maintenant"
+            android:backgroundTint="@color/black"
+            android:visibility="gone"
+
+            />
+
     </FrameLayout>
 
 
