--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -15,6 +15,13 @@
        android:background="@drawable/background_content_top"
        app:layout_constraintBottom_toTopOf="@id/layoutSend"
        app:layout_constraintTop_toTopOf="parent"/>
+ <View
+     android:id="@+id/headerBackground"
+     android:layout_width="match_parent"
+     android:layout_height="0dp"
+     android:background="@color/teal_700"
+     app:layout_constraintBottom_toTopOf="@id/viewSupporter"
+     app:layout_constraintTop_toTopOf="parent"/>
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageBack"
         android:layout_width="30dp"
@@ -25,7 +32,8 @@
         android:padding="5dp"
         android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:tint="@color/white"/>
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageInfo"
         android:layout_width="30dp"
@@ -37,7 +45,8 @@
         android:padding="4dp"
         android:src="@drawable/ic_info"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:tint="@color/white"/>
     <TextView
         android:id="@+id/textName"
         android:layout_width="0dp"
@@ -47,7 +56,7 @@
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
-        android:textColor="@color/background"
+        android:textColor="@color/white"
         android:textSize="14dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/imageBack"
@@ -55,6 +64,17 @@
         app:layout_constraintStart_toEndOf="@id/imageBack"
 
         app:layout_constraintTop_toTopOf="@id/imageBack"/>
+    <View
+        android:id="@+id/viewSupporter"
+        android:layout_width="match_parent"
+        android:background="@color/background"
+        android:layout_height="1dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/imageBack"/>
+
+
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chatRecyclerView"
         android:layout_width="match_parent"
@@ -63,8 +83,9 @@
         android:orientation="vertical"
         android:overScrollMode="never"
         android:padding="20dp"
+        app:stackFromEnd="true"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/imageBack"
+        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/viewBackground"
         />
@@ -94,7 +115,7 @@
             android:layout_marginLeft="4dp"
             android:padding="8dp"
             android:src="@drawable/ic_send"
-            app:tint="@color/teal_700"
+            app:tint="@color/white"
 
             />
     </FrameLayout>
