--- a/app/src/main/res/layout/item_container_received_message.xml
+++ b/app/src/main/res/layout/item_container_received_message.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
     android:padding="4dp">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -24,9 +25,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-
+        android:layout_marginLeft="4dp"
         android:background="@drawable/background_received_message"
-        android:padding="12dp"
+        android:paddingStart="12dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="12dp"
+        android:paddingBottom="8dp"
+        app:layout_constraintWidth_max="wrap"
         android:textColor="@color/white"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
@@ -41,7 +46,7 @@
         android:layout_marginTop="4dp"
         android:textColor="@color/black"
 
-        android:textSize="10sp"
+        android:textSize="8sp"
 
         app:layout_constraintTop_toBottomOf="@id/textMessage"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
