--- a/app/src/main/res/layout/activity_recherche.xml
+++ b/app/src/main/res/layout/activity_recherche.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="12dp"
         android:padding="6dp"
-        android:src="@drawable/ic_back"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:tint="@color/white"/>
@@ -26,7 +26,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="@color/background"
+        android:background="@color/teal_700"
         android:padding="6dp"
         android:src="@drawable/ic_logout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,9 +54,15 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/background_content_bottom"
-        android:backgroundTint="@color/background"
+        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageBack">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="130dp"
+            android:src="@drawable/logo"
+            android:contentDescription="@string/todo" />
 
         <Spinner
             android:id="@+id/specialite"
