--- a/app/src/main/res/layout/activity_user_profil.xml
+++ b/app/src/main/res/layout/activity_user_profil.xml
@@ -17,9 +17,8 @@
         android:layout_marginTop="60dp"
         android:layout_toRightOf="@+id/photoProfil"
         android:width="230dp"
-        android:text="Salut Ahmed"
-
-        android:textSize="40dp"
+        android:text="charger/ modifier photo de profil"
+        android:textColor="@color/teal_700"
         android:textStyle="italic|bold" />
 
 
@@ -72,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="280dp"
-        android:text="EmaiL  : "
+        android:text="Email  : "
         android:textSize="20dp"
         android:textStyle="bold" />
 
